@@ -1,4 +1,4 @@
-$Id: TODO,v 1.33 2006-11-13 19:22:38 karl Exp $
+$Id: TODO,v 1.34 2007-01-07 19:11:36 karl Exp $
 This is the todo list for GNU Texinfo.
 If you are interested in working on any of these, email bug-texinfo@gnu.org.
 
@@ -75,7 +75,8 @@ If you are interested in working on any of these, email bug-texinfo@gnu.org.
 
 * Makeinfo:
   - Translation of "Appendix" etc. should depend on @doclang not $LANG.
-  - Try directory of main source file.
+  - Really support UTF-8 instead of just passing through the bytes.
+  - Automatically do -I of directory of main source file.
   - Make makeinfo -E just do macro expansion, avoiding all error checks.
     That way, texi2dvi could run makeinfo --iftex -E.
   - A detexinfo program, like detex or delatex.  This command would
